cabal-version:      3.0
name:               unlifted-base
version:            1.0.0
synopsis:           Base with 100% less worse things.
description:        Someday something will go here.
homepage:           https://github.com/kozross/unlifted-base
license:            Apache-2.0
license-file:       LICENSE.md
author:             Koz Ross
maintainer:         koz.ross@retro-freedom.nz
bug-reports:        https://github.com/kozross/unlifted-base/issues
copyright:          (C) Koz Ross 2022
category:           Unlifted
tested-with:        GHC ==9.2.3
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

-- Common section

common lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Wmissing-deriving-strategies

  default-language: Haskell2010

-- Library

library
  import:          lang
  exposed-modules: Unlifted.Ordering
  build-depends:   ghc-prim ^>=0.8.0
  hs-source-dirs:  src
